<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Work Time Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="start_time">Start time:</string>
    <string name="stop_time">Stop time:</string>
    <string name="diff_time">Diff:</string>
    <string name="over_hours">Over hours:</string>
    <string name="now">Now</string>
    <string name="log">Log</string>

</resources>