<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              tools:context=".WorkTimeTracker">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/over_hours"
                    android:id="@+id/overHours"
                    android:layout_gravity="center"/>

            <TextView
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:layout_gravity="center"/>

            <TimePicker
                    android:id="@+id/startTimePicker"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/now"
                    android:id="@+id/startNow"
                    android:layout_gravity="center"
                    android:onClick="now"/>

            <TextView
                    android:id="@+id/stop_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_time"
                    android:layout_gravity="center"/>

            <TimePicker
                    android:id="@+id/stopTimePicker"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/now"
                    android:id="@+id/stopNow"
                    android:layout_gravity="center"
                    android:onClick="now"/>

            <!-- TODO breaktime-->

            <TextView
                    android:id="@+id/diff_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log"
                    android:id="@+id/log"
                    android:layout_gravity="center"
                    android:onClick="log"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>